# tutti

./: .env.example  .gitignore  Caddyfile  Caddyfile.local  DEPLOY.md  Makefile  README.md  deploy.sh  dev.sh  docker-compose.local.yml  docker-compose.yml
client/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
client/src/: app.html  hooks.server.ts
client/src/lib/audio/: bridge-worker.ts  capture.ts  context.ts  latency.ts  playback.ts  ring-buffer.ts  transport-bridge.ts  types.ts
client/src/lib/audio/worklets/: capture-processor.ts  playback-processor.ts
client/src/lib/components/: AudioDiagnostics.svelte  JoinDialog.svelte  LatencyDisplay.svelte  LatencyTester.svelte  Mixer.svelte  Room.svelte  RoomList.svelte  VacateNotice.svelte
client/src/lib/latency/: breakdown.ts  loopback-test.ts  rtt-monitor.ts
client/src/lib/stores/: audio-stats.ts  audio.ts  room.ts  settings.ts
client/src/lib/transport/: detect.ts  transport.ts  webrtc.ts  webtransport.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/room/[name]/: +page.svelte  +page.ts
client/static/worklets/: capture-processor.js  playback-processor.js
docs/: AUDIO_OPTIMISATION.md
server/: .dockerignore  CMakeLists.txt  Dockerfile  docker-entrypoint.sh
server/certs/: .gitignore  generate.sh
server/cmake/: FetchDependencies.cmake
server/src/: main.cpp
server/src/audio/: mixer.cpp  mixer.h  ring_buffer.h  room.cpp  room.h
server/src/rooms/: room_manager.cpp  room_manager.h  room_names.h
server/src/signaling/: http_server.cpp  http_server.h  ws_signaling.cpp  ws_signaling.h
server/src/telemetry/: latency.cpp  latency.h
server/src/transport/: rtc_transport.cpp  rtc_transport.h  session_binder.cpp  session_binder.h  transport_interface.h  wt_transport.cpp  wt_transport.h
server/tests/: mixer_test.cpp
shared/: protocol.md
